2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/Estimate_Sheet__c.object-meta.xml
<CustomObject>
    <label>Estimate Sheet</label>
    <nameField>
        <displayFormat>Estimate-{YYYY}{MM}-{0}</displayFormat>
        <label>Estimate Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimate Sheet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>