2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bar_40_cu_ft__c.field-meta.xml
<CustomField>
    <fullName>Bar_40_cu_ft__c</fullName>
    <label>Bar - 40</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>