2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bar_Stool_6__c.field-meta.xml
<CustomField>
    <fullName>Bar_Stool_6__c</fullName>
    <label>Bar Stool - 6</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>