2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bar_Stool_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bar_Stool_Sum__c</fullName>
    <formula>Bar_Stool_6__c  * 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bar Stool Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>