2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bar_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bar_Sum__c</fullName>
    <formula>Bar_40_cu_ft__c *40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bar Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>