2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/BBQ_20__c.field-meta.xml
<CustomField>
    <fullName>BBQ_20__c</fullName>
    <label>BBQ - 20</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>