2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/BBQ_Sum__c.field-meta.xml
<CustomField>
    <fullName>BBQ_Sum__c</fullName>
    <formula>BBQ_20__c  * 20 +  BBQ_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BBQ Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>