2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_King_Queen_78__c.field-meta.xml
<CustomField>
    <fullName>Bed_King_Queen_78__c</fullName>
    <label>Bed - King/Queen - 78</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>