2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_King_Queen_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bed_King_Queen_Sum__c</fullName>
    <formula>Bed_King_Queen_78__c *78</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed K/Q Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>