2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_Single_46__c.field-meta.xml
<CustomField>
    <fullName>Bed_Single_46__c</fullName>
    <label>Bed - Single - 46</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>