2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_Single_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bed_Single_Sum__c</fullName>
    <formula>Bed_Single_46__c *46</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Single Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>