2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_Youth_30__c.field-meta.xml
<CustomField>
    <fullName>Bed_Youth_30__c</fullName>
    <label>Bed Youth - 30</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>