2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bed_Youth_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bed_Youth_Sum__c</fullName>
    <formula>Bed_Youth_30__c *30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Youth Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>