2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bedroom_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bedroom_Sum__c</fullName>
    <formula>Bed_King_Queen_Sum__c  +  Bed_Single_Sum__c  +  Bunk_Beds_Sum__c  +   Headboard_Sum__c  +  Chests_W_Draw_Sum__c  +  Van_Dresser_Sum__c   + Stool_Sum__c  +  Night_Table_Sum__c  +  Wardrobe_Sum__c  +  Mirrors_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedroom Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>