2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bicycles_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bicycles_Sum__c</fullName>
    <formula>Bicycle_10__c  * 10 + Bicycle_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bicycles Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>