2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bookcase_Shelf_15__c.field-meta.xml
<CustomField>
    <fullName>Bookcase_Shelf_15__c</fullName>
    <label>Bookcase/Shelf - 15</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>