2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bookcase_Shelf_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bookcase_Shelf_Sum__c</fullName>
    <formula>Bookcase_Shelf_15__c *15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookcase/Shelf Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>