2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Buffet__c.field-meta.xml
<CustomField>
    <fullName>Buffet__c</fullName>
    <label>Buffet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>