2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Buffet_Sum__c.field-meta.xml
<CustomField>
    <fullName>Buffet_Sum__c</fullName>
    <formula>Buffet__c  * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buffet Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>