2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bunk_Beds_CKD__c.field-meta.xml
<CustomField>
    <fullName>Bunk_Beds_CKD__c</fullName>
    <label>Bunk Beds -CKD -54</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>