2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Bunk_Beds_Sum__c.field-meta.xml
<CustomField>
    <fullName>Bunk_Beds_Sum__c</fullName>
    <formula>Bunk_Beds_CKD__c *54</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bunk Beds Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>