2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_35__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_35__c</fullName>
    <label>Cabinet - 35</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>