2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_Filing_2D_10__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Filing_2D_10__c</fullName>
    <label>Cabinet - Filing(2D) - 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>