2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_Filing_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Filing_Sum__c</fullName>
    <formula>Cabinet_Filing_2D_10__c  * 10 +  Cabinet_Filing__c  * 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabinet Filing sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>