2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_Sideboard_30__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Sideboard_30__c</fullName>
    <label>Cabinet/Sideboard - 30</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>