2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_Sideboards_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Sideboards_Sum__c</fullName>
    <formula>Cabinet_Sideboard_30__c  * 30 +  Cabinet_Sideboard_40__c  * 40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabinet/Sideboards Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>