2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cabinet_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Sum__c</fullName>
    <formula>( Cabinet_25__c  * 25 )  +  (  Cabinet_35__c  * 35 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liv Cabinet Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>