2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Carpets_10__c.field-meta.xml
<CustomField>
    <fullName>Carpets_10__c</fullName>
    <label>Carpets - 10</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>