2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cartons_L_7__c.field-meta.xml
<CustomField>
    <fullName>Cartons_L_7__c</fullName>
    <label>Cartons L - 7</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>