2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cartons_M_4__c.field-meta.xml
<CustomField>
    <fullName>Cartons_M_4__c</fullName>
    <label>Cartons M - 4</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>