2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cartons_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cartons_Sum__c</fullName>
    <formula>China_Ware_Sum__c  +  Glass_Ware_Sum__c  +  Std_Wardrobe_Sum__c  +  Flat_Wardrobe_Sum__c +  S_M_L_Cartons_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartons Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>