2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chair_5__c.field-meta.xml
<CustomField>
    <fullName>Chair_5__c</fullName>
    <label>Chair - 5</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>