2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chair_Arm_14__c.field-meta.xml
<CustomField>
    <fullName>Chair_Arm_14__c</fullName>
    <label>Chair Arm - 14</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>