2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chair_Child_3__c.field-meta.xml
<CustomField>
    <fullName>Chair_Child_3__c</fullName>
    <label>Chair - Child - 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>