2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chairs_Sum__c.field-meta.xml
<CustomField>
    <fullName>Chairs_Sum__c</fullName>
    <formula>Chair_5__c  * 5 +  Chair_8__c  * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chairs Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>