2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chest_Cadar_15__c.field-meta.xml
<CustomField>
    <fullName>Chest_Cadar_15__c</fullName>
    <label>Chest - Cadar - 15</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>