2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chest_Camphor_20__c.field-meta.xml
<CustomField>
    <fullName>Chest_Camphor_20__c</fullName>
    <label>Chest - Camphor - 20</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>