2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chest_Korean_12__c.field-meta.xml
<CustomField>
    <fullName>Chest_Korean_12__c</fullName>
    <label>Chest - Korean - 12</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>