2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chests_Sum__c.field-meta.xml
<CustomField>
    <fullName>Chests_Sum__c</fullName>
    <formula>Chest_Cadar_15__c  * 15 +  Chest_Camphor_20__c  * 20 +  Chest_Korean_12__c  * 12 +  Chest_Korean_5__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Din Chests Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>