2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Chests_W_Draw_Sum__c.field-meta.xml
<CustomField>
    <fullName>Chests_W_Draw_Sum__c</fullName>
    <formula>L_Chest_W_Draw_36__c  * 36 +  Sm_Chest_W_Draw_18__c  * 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chests W/Draw Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>