2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Clothes_Dryer_Sum__c.field-meta.xml
<CustomField>
    <fullName>Clothes_Dryer_Sum__c</fullName>
    <formula>Clothes_Dryer_25__c  * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clothes Dryer Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>