2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Computer_Set_20__c.field-meta.xml
<CustomField>
    <fullName>Computer_Set_20__c</fullName>
    <label>Computer Set - 20</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>