2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Computer_Set_Sum__c.field-meta.xml
<CustomField>
    <fullName>Computer_Set_Sum__c</fullName>
    <formula>Computer_Set_20__c  * 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computer Set Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>