2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cooker_Gas_25__c.field-meta.xml
<CustomField>
    <fullName>Cooker_Gas_25__c</fullName>
    <label>Cooker - Gas - 25</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>