2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Cookers_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cookers_Sum__c</fullName>
    <formula>Cooker_Electric_25__c  * 25 +  Cooker_Gas_25__c  * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cookers Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>