2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Crib_Baby_10__c.field-meta.xml
<CustomField>
    <fullName>Crib_Baby_10__c</fullName>
    <label>Crib Baby - 10</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>