2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Crib_Baby_Sum__c.field-meta.xml
<CustomField>
    <fullName>Crib_Baby_Sum__c</fullName>
    <formula>Crib_Baby_10__c *10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crib Baby Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>