2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Desk_Sum__c.field-meta.xml
<CustomField>
    <fullName>Desk_Sum__c</fullName>
    <formula>Desk_25__c  * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desk Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>