2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dining__c.field-meta.xml
<CustomField>
    <fullName>Dining__c</fullName>
    <label>Dining Chair - 8</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>