2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dining_Chairs_Sum__c.field-meta.xml
<CustomField>
    <fullName>Dining_Chairs_Sum__c</fullName>
    <formula>Dining__c *8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dining Chairs Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>