2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dining_Room_Sum__c.field-meta.xml
<CustomField>
    <fullName>Dining_Room_Sum__c</fullName>
    <formula>Cabinet_Sideboards_Sum__c  +  Dining_Chairs_Sum__c  +  Chests_Sum__c  +  Table_Round_Sum__c  +  Table_Std_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dining Room Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>