2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dishwasher__c.field-meta.xml
<CustomField>
    <fullName>Dishwasher__c</fullName>
    <label>Dishwasher - 20</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>