2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dishwasher_Sum__c.field-meta.xml
<CustomField>
    <fullName>Dishwasher_Sum__c</fullName>
    <formula>Dishwasher__c *20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dishwasher Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>