2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Dragon_Pots_Sum__c.field-meta.xml
<CustomField>
    <fullName>Dragon_Pots_Sum__c</fullName>
    <formula>Dragon_Pots_8__c  * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dragon Pots Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>