2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N200000011VHDEA2</relationshipName>
    <type>Lookup</type>
</CustomField>