2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Flat_Wardrobe_Sum__c.field-meta.xml
<CustomField>
    <fullName>Flat_Wardrobe_Sum__c</fullName>
    <formula>Flat_Wardrobe_3__c  * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat Wardrobe Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>