2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Flower_Pots_Sum__c.field-meta.xml
<CustomField>
    <fullName>Flower_Pots_Sum__c</fullName>
    <formula>Flower_Pots_2__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flower Pots Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>