2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Glass_Ware_Sum__c.field-meta.xml
<CustomField>
    <fullName>Glass_Ware_Sum__c</fullName>
    <formula>Glass_Ware_4__c  * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glass Ware Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>