2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Golf__c.field-meta.xml
<CustomField>
    <fullName>Golf__c</fullName>
    <label>Golf - 5</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>