2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Golf_Sum__c.field-meta.xml
<CustomField>
    <fullName>Golf_Sum__c</fullName>
    <formula>Golf__c *5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Golf Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>