2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Headboard_6__c.field-meta.xml
<CustomField>
    <fullName>Headboard_6__c</fullName>
    <label>Headboard - 6</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>