2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Headboard_Sum__c.field-meta.xml
<CustomField>
    <fullName>Headboard_Sum__c</fullName>
    <formula>Headboard_6__c  * 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headboard Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>