2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Hifi_Set_30__c.field-meta.xml
<CustomField>
    <fullName>Hifi_Set_30__c</fullName>
    <label>Hifi Set - 30</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>