2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Hifi_Set_Sum__c.field-meta.xml
<CustomField>
    <fullName>Hifi_Set_Sum__c</fullName>
    <formula>Hifi_Set_15__c  * 15 +  Hifi_Set_30__c  * 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hifi Set Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>