2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Kitchen_Sum__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Sum__c</fullName>
    <formula>Cookers_Sum__c  +  Dishwasher_Sum__c  +  Clothes_Dryer_Sum__c  +  Microwave_Sum__c  +  Washing_Machine_Sum__c +  Refrigerator_Sum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kitchen Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>