2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/L_Chest_W_Draw_36__c.field-meta.xml
<CustomField>
    <fullName>L_Chest_W_Draw_36__c</fullName>
    <label>L. Chest W/Draw - 36</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>