2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Lamps_Sum__c.field-meta.xml
<CustomField>
    <fullName>Lamps_Sum__c</fullName>
    <formula>Lamp_Floor_3__c  * 3 +  Lamp_Shade_3__c  * 3 +  Lamp_Table_2__c  * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lamps - Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>