2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Liv_Chairs_Sum__c.field-meta.xml
<CustomField>
    <fullName>Liv_Chairs_Sum__c</fullName>
    <formula>( Chair_Arm_14__c  * 14)+ (Chair_Overstuffed_25__c  * 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liv Chairs Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>