2nd training/Community/Community/Community1/force-app/main/default/objects/Estimate_Sheet__c/fields/Liv_Tables_Sum__c.field-meta.xml
<CustomField>
    <fullName>Liv_Tables_Sum__c</fullName>
    <formula>Table_Coffee_5__c  * 5 +  Table_Coffee_12__c  * 12 +  Table_End_5__c  * 5 +  Table_End_10__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liv Tables Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>